# cs610-streamlit-app

./: .gitattributes  README.md  Welcome.py  copy.md  pyproject.toml
artifacts/: inference_constants.json  metrics.csv
artifacts/embedder/: clinicalbert_cls_fp16.onnx
artifacts/models/hospital/: lr.pkl  mlp_scaler.pkl  xgb_meta.json
artifacts/models/patient/: lr.pkl  mlp_scaler.pkl  xgb_meta.json
artifacts/prompts/: assistant_prompt.md  system_prompt.md
pages/: 1_Inference.py  1_🩺_Inference.py  2_Kaki_Care.py  2_Kiasu_Care.py  2_❤️_Kiasu_Care.py  3_Data.py  3_📊_Data.py  4_Model_Comparisons.py  4_⚖️_Model_Comparisons.py
pages/tools/: __init__.py  get_esi_prediction.py  schema.json  tools.py
src/: embedder.py  frame_builder.py  inference_pipeline.py  models.py
