[project]
name = "triage-support"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "joblib>=1.5.3",
    "numpy>=2.5.1",
    "onnxruntime>=1.27.0",
    "pandas>=3.0.3",
    "streamlit>=1.59.1",
    "tokenizers>=0.23.1",
    "torch>=2.13.0",
    "xgboost>=3.3.0",
]
